--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
   <div class="nav_bg_color">
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">
+      <!-- <a class="navbar-brand" href="#">
         <img src="/mpic.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top" />
         Aayushker
-      </a>
+      </a> -->
       <a class="navbar-brand" href="#">Home</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
