--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 </head>
 
 <body>
-  <p>Hello</p>
+  <!-- <p>Hello</p>
   <div class="nav_bg_color">
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <!-- <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="#">
         <img src="/mpic.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top" />
         Aayushker
       </a> -->
